--- a/_sass/animation/_illustrations.scss
+++ b/_sass/animation/_illustrations.scss
@@ -26,7 +26,7 @@
 }
 
 [data-animation="categorizing"]  {
-  .categorizing-alert,
+  .alert-categorizing,
   #categorizing-alert--mobile {
     opacity: 1;
   }
